# verity

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TECHNICAL.md  alembic.ini  docker-compose.yml  locustfile.py  pyproject.toml
.github/workflows/: ci.yml  docker.yml  evals.yml
api/: auth.py  llm.py  main.py  rag.py  rate_limit.py
cuad/: README.md  run.py
cuad/scripts/: baseline.py  download.py  eda.py  eval_all.py  splits.py  train_base.py  train_large.py
cuad/src/: dataset.py  eval_harness.py  features.py  span_aggregation.py  train.py
cuad/tests/: test_eval_harness.py  test_features.py  test_span_aggregation.py
evals/: dataset.jsonl  judges.py  run.py  summarize.py
migrations/: env.py
migrations/versions/: 20260512_0001_add_pgvector_and_chunks_embedding.py
scripts/: add_rag_query_indexes.sql  backfill_embeddings.py  drop_retrying_enum.sql  init_db.py  migrate_to_tz_aware.sql  run.py  test.py
shared/: logging_config.py  metrics.py  minio_client.py  models.py  redis_queue.py  settings.py  types.py
tests/: conftest.py  seed.py  test_api.py  test_assembler.py  test_auth.py  test_classifier.py  test_db_init.py  test_embeddings.py  test_idempotency.py  test_ingestion.py  test_llm.py  test_metrics.py  test_rag_endpoint.py  test_rate_limit.py  test_redis_integration.py  test_redis_queue.py  test_scorer.py  test_seed.py  test_upload_size.py
worker/: main.py
worker/processors/: assembler.py  category_mapping.json  classifier.py  clause_labels.py  cuad_questions.json  embeddings.py  ingestion.py  risk_rules.py  scorer.py  span_extractor.py
worker/processors/rules/: risk_patterns.yaml
