[project]
name = "contract-risk-pipeline"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "sqlalchemy>=2.0.40",
    "psycopg2-binary>=2.9.10",
    "redis>=5.2.0",
    "minio>=7.2.15",
    "transformers>=4.51.0",
    "torch>=2.7.0",
    "pypdf>=5.4.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.8.0",
    "python-multipart>=0.0.20",
    "slowapi>=0.1.9",
    "prometheus-client>=0.22.0",
    "spacy>=3.8.0",
    "pyyaml>=6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "httpx>=0.28.0",
    "flake8>=7.0.0",
]