[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "worker", "shared", "cuad"]

[project]
name = "contract-risk-pipeline"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "uvicorn>=0.34.0",
    "sqlalchemy>=2.0.49",
    "psycopg2-binary>=2.9.10",
    "redis>=5.2.0",
    "minio>=7.2.15",
    "transformers>=5.5.4",
    "torch>=2.7.0",
    "pypdf>=6.10.2",
    "pydantic>=2.13.1",
    "pydantic-settings>=2.8.0",
    "python-multipart>=0.0.26",
    "slowapi>=0.1.9",
    "prometheus-client>=0.22.0",
    "spacy>=3.8.10,<3.8.14",
    "pyyaml>=6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "httpx>=0.28.0",
    "flake8>=7.0.0",
    "locust>=2.36.0",
]
cuad = [
    "datasets>=3.0.0",
    "accelerate>=1.0.0",
    "evaluate>=0.4.3",
    "scikit-learn>=1.4.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "pyarrow>=15.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "tqdm>=4.66.0",
    "rich>=13.0.0",
]
